class BookClient
    def all(max:, offset: 0, subject: "any")
        raise StandardError.new("This method has to be implemented!")
    end

    def by_id(id)
        raise StandardError.new("This method has to be implemented!")
    end
end